<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerVet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/descriptionRelationVet"
                android:src="@drawable/veterinaria_male" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:fontFamily="@font/bungee_regular"
                android:includeFontPadding="false"
                android:text="@string/info_veterinaria"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:includeFontPadding="false"
                android:text="@string/info_veterinaria"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/name_vet"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/address"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perfil_pro"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileProVet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/doctor"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/up_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/select" />

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_image"
                    android:textColorHint="#000"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/img_photo_vet"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="text">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <ImageButton
                    android:id="@+id/select"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/inscribirse"
                    app:srcCompat="@drawable/up" />


            </LinearLayout>

            <ImageView
                android:id="@+id/iv_result"
                android:layout_width="410dp"
                android:layout_height="410dp" />
            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_show_uploads"
                android:text="Show Uploads"
                android:layout_gravity="center"
                android:layout_margin="25dp"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cell_phone"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cell_phone_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/whatsapp"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/facebook"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/facebook_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/facebook_messenger"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instagram"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instagram_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/instagram"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/twitter"
                android:padding="10dp"
                android:textColorHint="#000"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/twitter_vet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/twitter"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendVet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondos"
                android:fontFamily="@font/bungee_regular"
                android:text="@string/send" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>